앱 프로필 입력 복수 경로 추가
